<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Appify</string>
    <string name="debug_tag">appify</string>
    <string name="action_settings">Opciones</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Menu principal</string>
    <string name="second_fragment_label">Aqui va info</string>
    <string name="next">siguiente</string>
    <string name="previous">Regresar</string>

    <string name="hello_first_fragment">First Fragment</string>
    <string name="hello_second_fragment">Segunda pantalla Arg: %1$s</string>
    <string name="cancel">Cancelar</string>
    <string name="register">Regístrate</string>
    <string name="login">Ingresa</string>
    <string name="ui_email">Correo Electrónico</string>
    <string name="ui_username">Usuario</string>
    <string name="ui_password">Contraseña (Matrícula)</string>
    <string name="ui_donthave">¿No tienes una cuenta?</string>
    <string name="ui_points">Tus Puntos</string>
    <string name="ui_registersoon">Próximamente podrás disfrutar de los servicios de nuestra app. Siguenos en nuestras redes sociales.</string>
    <string name="ui_network_error">Error al conectar al servidor</string>
    <string name="ui_continue">Continuar</string>
    <string name="ui_dalelike">¿Te gustó\n😀😍🥺🤬💩</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
